Fix typos and imrove style

--- a/04_containers.Rmd
+++ b/04_containers.Rmd
@@ -14,7 +14,7 @@ The building blocks of the framework are **data container**
 developers using the TreeSE container, open **demonstration data
 sets**, in a separate chapter \@ref(example-data), and **online
 tutorials** including this online book as well as the various package
-vignettes and other material.
+vignettes and other materials.
 
 ```{r echo=FALSE}
 knitr::include_graphics("general/figures/FigureOverviewV2_mod.png")
@@ -71,8 +71,7 @@ tse <- GlobalPatterns
 assays(tse)
 ```
 
-The `assays` slot contains the experimental data as count matrices. Multiple 
-matrices can be stored the result of `assays` is actually a list of matrices.
+The `assays` slot contains the experimental data as multiple count matrices. The result of `assays` is a list of matrices.
 
 ```{r}
 assays(tse)
@@ -101,7 +100,7 @@ assay(tse, "relabundance")[1:5,1:7]
 
 
 Here the dimension of the count data remains unchanged. This is in
-fact a requirement for any `SummarizedExperiment` object.
+fact, a requirement for any `SummarizedExperiment` object.
 
 
 
@@ -118,7 +117,7 @@ colData(tse)
 ### rowData
 
 `rowData` contains data on the features of the analyzed samples. Of particular
-interest for the microbiome field this is used to store taxonomic information.
+interest to the microbiome field, this is used to store taxonomic information.
 
 ```{r rowdata}
 rowData(tse)
@@ -126,8 +125,8 @@ rowData(tse)
 
 ### rowTree  
 
-Phylogenetic trees also play an important role for the microbiome field. The 
-`TreeSummarizedExperiment` class is able to keep track of feature and node
+Phylogenetic trees also play an important role in the microbiome field. The 
+`TreeSummarizedExperiment` class can keep track of features and node
 relations via two functions, `rowTree` and `rowLinks`.
 
 A tree can be accessed via `rowTree` as `phylo` object.       
@@ -142,7 +141,7 @@ rowLinks(tse)
 ```
 
 Please note that there can be a 1:1 relationship between tree nodes and 
-features, but this is not a must have. This means there can be features, which
+features, but this is not a must-have. This means there can be features, which
 are not linked to nodes, and nodes, which are not linked to features. To change
 the links in an existing object, the `changeTree` function is available.
 
@@ -155,15 +154,15 @@ contain complementary data, which is no longer tied to the same
 dimensions as the assay data. However, the number of samples (columns)
 must be the same.
 
-This can come into play for instance when one has taxonomic abundance
+This can come into play, for instance, when one has taxonomic abundance
 profiles quantified with different measurement technologies, such as
 phylogenetic microarrays, amplicon sequencing, or metagenomic
 sequencing. Such alternative experiments that concern the same samples
 can be stored as
 
 1. Separate _assays_ assuming that the taxonomic information can be mapped 
-between feature directly 1:1; or 
-2. data in the _altExp_ slot of the `TreeSummarizedExperiment`, if the feature 
+between features directly 1:1; or 
+2. Data in the _altExp_ slot of the `TreeSummarizedExperiment`, if the feature 
 dimensions differ. Each element of the _altExp_ slot is a `SummarizedExperiment`
 or an object from a derived class with independent feature data.
 
@@ -207,8 +206,8 @@ datasets relate to each other the data can be stored as:
 2. As `MultiAssayExperiment` objects, in which the connections between
 samples are defined through a `sampleMap`. Each element on the
 `experimentsList` of an `MultiAssayExperiment` is `matrix` or
-`matrix`-like object including `SummarizedExperiment` objects, and the
-number of samples can differ between the elements.
+`matrix`-like objects, including `SummarizedExperiment` objects, and 
+the number of samples can differ between the elements.
 
 
 ```{r}
@@ -350,14 +349,14 @@ resources. The output has to be converted into TreeSE/MAE separately.
 
 ### 16S workflow
 
-Result of amplicon sequencing is large number of files that include all the sequences
+Result of amplicon sequencing is a large number of files that include all the sequences
 that were read from samples. Those sequences need to be matched with taxa. Additionally,
 we need to know how many times each taxa were found from each sample. 
 
 There are several algorithms to do that, and DADA2 is one of the most common. 
-You can find DADA2 pipeline tutorial for example from 
+You can find DADA2 pipeline tutorial, for example, 
 [here](https://benjjneb.github.io/dada2/tutorial.html).
-After DADA2 portion of the tutorial is the data is stored into _phyloseq_ object 
+After the DADA2 portion of the tutorial is completed, the data is stored into _phyloseq_ object 
 (Bonus: Handoff to phyloseq). To store the data to _TreeSummarizedExperiment_,
 follow the example below. 
 
@@ -382,7 +381,7 @@ library("Biostrings")
 library(Biostrings)
 ```
 
-Create arbitrary example sample metadata like it was done in tutorial. Usually, 
+Create arbitrary example sample metadata like it was done in the tutorial. Usually, 
 sample metadata is imported as a file.
 
 ```{r dada2_3}
@@ -397,7 +396,7 @@ samdf$When[samdf$Day>100] <- "Late"
 rownames(samdf) <- samples.out
 ```
 
-Convert data into right format and create _TreeSE_ object.
+Convert data into right format and create a _TreeSE_ object.
 
 ```{r dada2_4}
 # Create a list that contains assays
@@ -437,7 +436,7 @@ tse
 
 Microbiome (taxonomic) profiling data is commonly distributed in
 various file formats. You can import such external data files as a
-(Tree)SummarizedExperiment object but the details depend on the file
+(Tree)SummarizedExperiment object, but the details depend on the file
 format. Here, we provide examples for common formats. 
 
 
@@ -452,7 +451,7 @@ format. Here, we provide examples for common formats.
   construct your own CSV files accordingly.
 
 Recommendations for the CSV files are the following. File names are
-arbitrary; we refer here to the same names than in the examples:
+arbitrary; we refer here to the same names as in the examples:
 
 - Abundance table (`assay_taxa.csv`): data matrix (features x
   samples); first column provides feature IDs, the first row provides
