--- a/book.bib
+++ b/book.bib
@@ -214,7 +214,7 @@
 }
 
 @Article{Ramos2017,
-  title =	 { Software For The Integration Of Multi-Omics
+  title =	 {Software For The Integration Of Multi Omics
                   Experiments In Bioconductor},
   author =	 {Marcel Ramos and Lucas Schiffer and Angela Re and
                   Rimsha Azhar and Azfar Basunia and Carmen Rodriguez
@@ -549,7 +549,7 @@ year = {2022}
 }
 
 @Manual{R-MultiAssayExperiment,
-  title =	 {MultiAssayExperiment: Software For The Integration Of Multi-Omics
+  title =	 {{MultiAssayExperiment}: Software For The Integration Of Multi Omics
                   Experiments In Bioconductor},
   author =	 {Marcel Ramos and Lucas Schiffer and Angela Re and
                   Rimsha Azhar and Azfar Basunia and Carmen Rodriguez
