--- a/book.bib
+++ b/book.bib
@@ -214,13 +214,12 @@
 }
 
 @Article{Ramos2017,
-  title =	 {Software For The Integration Of Multi Omics
-                  Experiments In Bioconductor},
+  title =	 {Software for the Integration of Multiomics Experiments in Bioconductor},
   author =	 {Marcel Ramos and Lucas Schiffer and Angela Re and
                   Rimsha Azhar and Azfar Basunia and Carmen Rodriguez
                   Cabrera and Tiffany Chan and Philip Chapman and Sean
-                  Davis and David Gomez-Cabrero and Aedin C. Culhane
-                  and Benjamin Haibe-Kains and Kasper Hansen and
+                  Davis and David Gomez_Cabrero and Aedin C. Culhane
+                  and Benjamin Haibe_Kains and Kasper Hansen and
                   Hanish Kodali and Marie Stephie Louis and Arvind
                   Singh Mer and Markus Reister and Martin Morgan and
                   Vincent Carey and Levi Waldron},
@@ -549,8 +548,7 @@ year = {2022}
 }
 
 @Manual{R-MultiAssayExperiment,
-  title =	 {{MultiAssayExperiment}: Software For The Integration Of Multi Omics
-                  Experiments In Bioconductor},
+  title =	 {{MultiAssayExperiment}: Software for the Integration of Multiomics Experiments in Bioconductor},
   author =	 {Marcel Ramos and Lucas Schiffer and Angela Re and
                   Rimsha Azhar and Azfar Basunia and Carmen Rodriguez
                   Cabrera and Tiffany Chan and Philip Chapman and Sean
