--- a/20_beta_diversity.Rmd
+++ b/20_beta_diversity.Rmd
@@ -333,8 +333,8 @@ kable(rda_info)
 
 ```{r microbiome_RDA2}
 # Load ggord for plotting
-library("ggord")
-library("ggplot2")
+library(ggord)
+library(ggplot2)
 
 # Since na.exclude was used, if there were rows missing information, they were 
 # dropped off. Subset coldata so that it matches with rda.
