--- a/20_beta_diversity.Rmd
+++ b/20_beta_diversity.Rmd
@@ -257,9 +257,9 @@ each covariate affects.
 
 ```{r microbiome_RDA1}
 # Load libraryd packages
-library("vegan")
-library("stringr")
-library("knitr")
+library(vegan)
+library(stringr)
+library(knitr)
 # Load data
 data(enterotype, package="mia")
 # Covariates that are being analyzed
