Change data sets to datasets

--- a/10_manipulation.Rmd
+++ b/10_manipulation.Rmd
@@ -34,8 +34,8 @@ molten_tse
 ### Subsetting
 
 **Subsetting** data helps to draw the focus of analysis on particular
-  sets of samples and / or features. When dealing with large data
-  sets, the subset of interest can be extracted and investigated
+  sets of samples and / or features. When dealing with large datasets, 
+  the subset of interest can be extracted and investigated
   separately. This might improve performance and reduce the
   computational load.
 
