Remove draft of MOFA exercise (will do in the future)

--- a/98_exercises.Rmd
+++ b/98_exercises.Rmd
@@ -429,23 +429,7 @@ experiments in the MAE.
    experiments (microbiota vs metabolites and metabolites vs biomarkers) and
    visualize results with heatmaps
    
-Great job! You performed a cross-correlation analysis between two experiments
-of a MAE and visualized the results with a heatmap. You are also able to
-customise the correlation method and significance testing used for the analysis.
-
-### Multi-omic Factor Analysis (MOFA)
-
-TO DO
-
-We further move onto an exercise on MOFA, which is explained in chapter \@ref(mofa).
-
-1. Import the mia package, load HintikkaXOData with `data` and store it into a
-   variable named `mae`
-
-Congratulations! You conducted a MOFA.
-
-
-
-
-
+Great job! You performed a cross-correlation analysis between two experiments of
+a MAE and visualized the results with a heatmap. You are also able to customise
+the correlation method and significance testing used for the analysis.
 
