--- a/06_packages.Rmd
+++ b/06_packages.Rmd
@@ -74,7 +74,7 @@ or online channels.
 
 ### mia family of methods
 
-- [mia](microbiome.github.io/mia): Microbiome analysis tools [@R-mia]
+- [mia](microbiome.github.io/mia): Microbiome analysis tools [@R_mia]
 - [miaViz](microbiome.github.io/miaViz): Microbiome analysis specific visualization [@Ernst2022]
 - [miaSim](microbiome.github.io/miaSim): Microbiome data simulations [@Simsek2021]
 - [miaTime](microbiome.github.io/miaTime): Microbiome time series analysis [@Lahti2021]
