--- a/11_taxonomic_information.Rmd
+++ b/11_taxonomic_information.Rmd
@@ -43,7 +43,7 @@ row of data and a training dataset. For more information visit the
 
 ### DECIPHER
 
-The DECIPHER package [@R-DECIPHER] implements the `IDTAXA` algorithm to assign
+The DECIPHER package [@R_DECIPHER] implements the `IDTAXA` algorithm to assign
 either taxonomic information or function information. For `mia`
 only the first option is of interest for now and more information can be
 found on the [DECIPHER website](http://www2.decipher.codes/Classification.html).
@@ -105,7 +105,7 @@ head(getTaxonomyLabels(tse[phylum,], with_rank = TRUE, make_unique = FALSE))
 ```
 
 To apply the loop resolving function `resolveLoop` from the
-`TreeSummarizedExperiment` package [@R-TreeSummarizedExperiment] within
+`TreeSummarizedExperiment` package [@R_TreeSummarizedExperiment] within
 `getTaxonomyLabels`, set `resolve_loops = TRUE`.
 
 The function `getUniqueTaxa` gives a list of unique taxa for the
@@ -131,7 +131,7 @@ tse
 ```
 
 The implementation is based on the `toTree` function from the
-`TreeSummarizedExperiment` package [@R-TreeSummarizedExperiment].
+`TreeSummarizedExperiment` package [@R_TreeSummarizedExperiment].
 
 ## Data agglomeration {#data-agglomeration}
 
