--- a/book.bib
+++ b/book.bib
@@ -225,6 +225,7 @@
                   Vincent Carey and Levi Waldron},
   journal =	 {Cancer Research},
   year = {2017},
+  doi =		 {10.1158/0008-5472.CAN-17-0344}
 }
 
 @Book{Amezquita2020,
@@ -445,7 +446,7 @@ year = {2022}
   doi =		 {10.1038/s41598-017-16520-0}
 }
 
-@Manual{R-Biobase,
+@Manual{R_Biobase,
   title =	 {Biobase: Base functions for Bioconductor},
   author =	 {R. Gentleman and V. Carey and M. Morgan and
                   S. Falcon},
@@ -454,7 +455,7 @@ year = {2022}
   url =		 {https://bioconductor.org/packages/Biobase},
 }
 
-@Manual{R-BiocGenerics,
+@Manual{R_BiocGenerics,
   title =	 {BiocGenerics: S4 generic functions used in
                   Bioconductor},
   author =	 {The Bioconductor Dev Team},
@@ -463,7 +464,7 @@ year = {2022}
   url =		 {https://bioconductor.org/packages/BiocGenerics},
 }
 
-@Manual{R-Biostrings,
+@Manual{R_Biostrings,
   title =	 {Biostrings: Efficient manipulation of biological
                   strings},
   author =	 {H. Pagès and P. Aboyoun and R. Gentleman and
@@ -473,7 +474,7 @@ year = {2022}
   url =		 {https://bioconductor.org/packages/Biostrings},
 }
 
-@Manual{R-DECIPHER,
+@Manual{R_DECIPHER,
   title =	 {DECIPHER: Tools for curating, analyzing, and
                   manipulating biological sequences},
   author =	 {Erik Wright},
@@ -481,7 +482,7 @@ year = {2022}
   note =	 {R package version 2.18.1},
 }
 
-@Manual{R-GenomeInfoDb,
+@Manual{R_GenomeInfoDb,
   title =	 {GenomeInfoDb: Utilities for manipulating chromosome
                   names, including modifying them to follow a
                   particular naming style},
@@ -492,7 +493,7 @@ year = {2022}
   url =		 {https://bioconductor.org/packages/GenomeInfoDb},
 }
 
-@Manual{R-IRanges,
+@Manual{R_IRanges,
   title =	 {IRanges: Foundation of integer range manipulation in
                   Bioconductor},
   author =	 {H. Pagès and P. Aboyoun and M. Lawrence},
@@ -501,7 +502,7 @@ year = {2022}
   url =		 {https://bioconductor.org/packages/IRanges},
 }
 
-@Manual{R-MatrixGenerics,
+@Manual{R_MatrixGenerics,
   title =	 {MatrixGenerics: S4 Generic Summary Statistic
                   Functions that Operate on Matrix-Like Objects},
   author =	 {Constantin Ahlmann-Eltze and Peter Hickey and Hervé
@@ -511,7 +512,7 @@ year = {2022}
   url =		 {https://bioconductor.org/packages/MatrixGenerics},
 }
 
-@Manual{R-S4Vectors,
+@Manual{R_S4Vectors,
   title =	 {S4Vectors: Foundation of vector-like and list-like
                   containers in Bioconductor},
   author =	 {H. Pagès and M. Lawrence and P. Aboyoun},
@@ -520,7 +521,7 @@ year = {2022}
   url =		 {https://bioconductor.org/packages/S4Vectors},
 }
 
-@Manual{R-SingleCellExperiment,
+@Manual{R_SingleCellExperiment,
   title =	 {SingleCellExperiment: S4 Classes for Single Cell
                   Data},
   author =	 {Aaron Lun and Davide Risso},
@@ -528,7 +529,7 @@ year = {2022}
   note =	 {R package version 1.12.0},
 }
 
-@Manual{R-SummarizedExperiment,
+@Manual{R_SummarizedExperiment,
   title =	 {SummarizedExperiment: SummarizedExperiment
                   container},
   author =	 {Martin Morgan and Valerie Obenchain and Jim Hester
@@ -539,7 +540,7 @@ year = {2022}
                   {https://bioconductor.org/packages/SummarizedExperiment},
 }
 
-@Manual{R-TreeSummarizedExperiment,
+@Manual{R_TreeSummarizedExperiment,
   title =	 {TreeSummarizedExperiment: a S4 Class for Data with
                   Tree Structures},
   author =	 {Ruizhu Huang},
@@ -547,21 +548,7 @@ year = {2022}
   note =	 {R package version 1.6.2},
 }
 
-@Manual{R-MultiAssayExperiment,
-  title =	 {{MultiAssayExperiment}: Software for the Integration of Multiomics Experiments in Bioconductor},
-  author =	 {Marcel Ramos and Lucas Schiffer and Angela Re and
-                  Rimsha Azhar and Azfar Basunia and Carmen Rodriguez
-                  Cabrera and Tiffany Chan and Philip Chapman and Sean
-                  Davis and David Gomez-Cabrero and Aedin C. Culhane
-                  and Benjamin Haibe-Kains and Kasper Hansen and
-                  Hanish Kodali and Marie Stephie Louis and Arvind
-                  Singh Mer and Markus Reister and Martin Morgan and
-                  Vincent Carey and Levi Waldron},
-  year =	 2017,
-  note =	 {R package version 1.26.0},
-}
-
-@Manual{R-XVector,
+@Manual{R_XVector,
   title =	 {XVector: Foundation of external vector
                   representation and manipulation in Bioconductor},
   author =	 {Hervé Pagès and Patrick Aboyoun},
@@ -570,7 +557,7 @@ year = {2022}
   url =		 {https://bioconductor.org/packages/XVector},
 }
 
-@Manual{R-base,
+@Manual{R_base,
   title =	 {R: A Language and Environment for Statistical
                   Computing},
   author =	 {{R Core Team}},
@@ -580,7 +567,7 @@ year = {2022}
   url =		 {https://www.R-project.org/},
 }
 
-@Manual{R-bluster,
+@Manual{R_bluster,
   title =	 {{bluster: Clustering Algorithms for Bioconductor}},
   author =	 {Aaron Lun},
   year =	 {2021},
@@ -602,7 +589,7 @@ year = {2022}
   doi =		 {10.1038/nmeth.3869},
 }
 
-@Manual{R-ggpubr,
+@Manual{R_ggpubr,
   title =	 {ggpubr: ggplot2 Based Publication Ready Plots},
   author =	 {Alboukadel Kassambara},
   year =	 {2020},
@@ -610,7 +597,7 @@ year = {2022}
   url =		 {https://rpkgs.datanovia.com/ggpubr/},
 }
 
-@Manual{R-knitr,
+@Manual{R_knitr,
   title =	 {knitr: A General-Purpose Package for Dynamic Report
                   Generation in R},
   author =	 {Yihui Xie},
@@ -619,7 +606,7 @@ year = {2022}
   url =		 {https://yihui.org/knitr/},
 }
 
-@Manual{R-matrixStats,
+@Manual{R_matrixStats,
   title =	 {matrixStats: Functions that Apply to Rows and
                   Columns of Matrices (and to Vectors)},
   author =	 {Henrik Bengtsson},
@@ -628,14 +615,14 @@ year = {2022}
   url =		 {https://github.com/HenrikBengtsson/matrixStats},
 }
 
-@Manual{R-mia,
+@Manual{R_mia,
   title =	 {mia: Microbiome analysis},
   author =	 {Felix G.M. Ernst and Sudarshan Shetty and Leo Lahti},
   year =	 {2020},
   note =	 {R package version 0.98.15},
 }
 
-@Manual{R-picante,
+@Manual{R_picante,
   title =	 {Picante: R tools for integrating phylogenies and
                   ecology},
   author =	 {Steven W Kembel and Peter D Cowan and Matthew R
@@ -647,7 +634,7 @@ year = {2022}
   url =		 {https://cran.r-project.org/web/packages/picante},
 }
 
-@Manual{R-rmarkdown,
+@Manual{R_rmarkdown,
   title =	 {rmarkdown: Dynamic Documents for R},
   author =	 {JJ Allaire and Yihui Xie and Jonathan McPherson and
                   Javier Luraschi and Kevin Ushey and Aron Atkins and
@@ -658,7 +645,7 @@ year = {2022}
   url =		 {https://github.com/rstudio/rmarkdown},
 }
 
-@Manual{R-scater,
+@Manual{R_scater,
   title =	 {scater: Single-Cell Analysis Toolkit for Gene
                   Expression Data in R},
   author =	 {Davis McCarthy and Kieran Campbell and Aaron Lun and
@@ -668,7 +655,7 @@ year = {2022}
   url =		 {http://bioconductor.org/packages/scater/},
 }
 
-@Manual{R-vegan,
+@Manual{R_vegan,
   title =	 {vegan: Community Ecology Package},
   author =	 {Jari Oksanen and F. Guillaume Blanchet and Michael
                   Friendly and Roeland Kindt and Pierre Legendre and
