--- a/14_alpha_diversity.Rmd
+++ b/14_alpha_diversity.Rmd
@@ -68,7 +68,7 @@ by species abundances.
 
 Alpha diversity can be estimated with wrapper functions that interact
 with other packages implementing the calculation, such as _`vegan`_
-[@R-vegan].
+[@R_vegan].
 
 
 ### Richness {#richness}
@@ -84,7 +84,7 @@ tse <- mia::estimateRichness(tse,
 head(colData(tse)$observed)
 ```
 This allows access to the values to be analyzed directly from the `colData`, for example
-by plotting them using `plotColData` from the _`scater`_ package [@R-scater].
+by plotting them using `plotColData` from the _`scater`_ package [@R_scater].
 
 ```{r plot-div-shannon, message=FALSE, fig.cap="Shannon diversity estimates plotted grouped by sample type with colour-labeled barcode."}
 library(scater)
@@ -167,7 +167,7 @@ plots[[1]] + plots[[2]] +
 ```
  
 Alternatively, the phylogenetic diversity can be calculated by `mia::estimateDiversity`. This is a faster re-implementation of   
-the widely used function in _`picante`_ [@R-picante, @Kembel2010].  
+the widely used function in _`picante`_ [@R_picante, @Kembel2010].  
 
 Load `picante` R package and get the `phylo` stored in `rowTree`.
 
