--- a/24_clustering.Rmd
+++ b/24_clustering.Rmd
@@ -409,7 +409,7 @@ data, is to run community detection algorithms after building a
 graph. The following demonstration builds a graph based on the k
 nearest-neighbors and performs the community detection on the fly.
 
-_`bluster`_ [@R-bluster] package offers several clustering methods,
+_`bluster`_ [@R_bluster] package offers several clustering methods,
 among which graph-based are present, enabling the community detection
 task.
 
@@ -425,7 +425,7 @@ to consider during graph construction) using the robust centered log
 ratio (rclr) assay data. Then plotting the communities using UMAP
 [@McInnes2018] ordination as a visual exploration aid.  In the
 following demonstration we use the `enterotype` dataset from the
-[@R-mia] package.
+[@R_mia] package.
 
 ```{r, message=FALSE, warning=FALSE}
 library(bluster)
@@ -456,7 +456,7 @@ plots <- lapply(k, ClustAndPlot)
 (plots[[1]] + plots[[2]]) / (plots[[3]] + plots[[4]])
 ```
 
-Similarly, the _`bluster`_ [@R-bluster] package offers clustering
+Similarly, the _`bluster`_ [@R_bluster] package offers clustering
 diagnostics that can be used for judging the clustering quality (see
 [Assorted clustering
 diagnostics](http://bioconductor.org/packages/release/bioc/vignettes/bluster/inst/doc/diagnostics.html)).
