--- a/book.bib
+++ b/book.bib
@@ -218,8 +218,8 @@
   author =	 {Marcel Ramos and Lucas Schiffer and Angela Re and
                   Rimsha Azhar and Azfar Basunia and Carmen Rodriguez
                   Cabrera and Tiffany Chan and Philip Chapman and Sean
-                  Davis and David Gomez_Cabrero and Aedin C. Culhane
-                  and Benjamin Haibe_Kains and Kasper Hansen and
+                  Davis and David Gomez-Cabrero and Aedin C. Culhane
+                  and Benjamin Haibe-Kains and Kasper Hansen and
                   Hanish Kodali and Marie Stephie Louis and Arvind
                   Singh Mer and Markus Reister and Martin Morgan and
                   Vincent Carey and Levi Waldron},
