--- a/04_containers.Rmd
+++ b/04_containers.Rmd
@@ -367,10 +367,7 @@ Load required packages.
 ```{r dada2_2}
 library(mia)
 library(ggplot2)
-
-library("BiocManager")
-library("Biostrings")
-
+library(BiocManager)
 library(Biostrings)
 ```
 
