--- a/19_visualization_techniques.Rmd
+++ b/19_visualization_techniques.Rmd
@@ -324,8 +324,8 @@ plots[[2]] <- plots[[2]] +
           legend.direction = "vertical")
 
 # Load required packages
-library("ggpubr")
-library("patchwork") 
+library(ggpubr)
+library(patchwork) 
 # Combine legends
 legend <- wrap_plots(as_ggplot(get_legend(plots[[1]])), as_ggplot(get_legend(plots[[2]])), ncol = 1) 
 
