--- a/23_multi-assay_analyses.Rmd
+++ b/23_multi-assay_analyses.Rmd
@@ -132,7 +132,7 @@ correlations <- testExperimentCrossCorrelation(mae,
 Creates the heatmap
 
 ```{r cross-correlation6, fig.width=10, fig.height=8}
-library("ComplexHeatmap") 
+library(ComplexHeatmap) 
 
 # Create a heatmap and store it
 plot <- Heatmap(correlations$cor,
