--- a/dada2_workflow.Rmd
+++ b/dada2_workflow.Rmd
@@ -165,16 +165,8 @@ cat("Of those,", sum(match.ref), "were exact matches to the expected reference s
 ```{r dada2_25}
 library(mia)
 library(ggplot2)
-
-if( !require("BiocManager") ){
-    install.packages("BiocManager")
-    library("BiocManager")
-}
-
-if( !require("Biostrings") ){
-    BiocManager::install("Biostrings")
-    library("Biostrings")
-}
+library(BiocManager)
+library(Biostrings)
 library(Biostrings)
 ```
 
