--- a/01_intro.Rmd
+++ b/01_intro.Rmd
@@ -8,7 +8,7 @@ chapterPreamble()
 ```
 
 This work - [**Orchestrating Microbiome Analysis with R and
-Bioconductor**](microbiome.github.io/OMA) [@OMA] - contributes novel
+Bioconductor**](https://microbiome.github.io/OMA/) [@OMA] - contributes novel
 methods and educational resources for microbiome data science.  It
 aims to teach the grammar of Bioconductor workflows in the context of
 microbiome data science. We show through concrete examples how to use
