--- a/index.Rmd
+++ b/index.Rmd
@@ -25,11 +25,10 @@ url: "`r .gh_url`"
 # Welcome {-}
 
 
-<a href="https://bioconductor.org"><img src="`r rebook::BiocSticker('animated')`" width="200" alt="Bioconductor Sticker" align="right" style="margin: 0 1em 0 1em" /></a>
 
 
 You are reading the online book, [**Orchestrating Microbiome Analysis
-with R and Bioconductor**](microbiome.github.io/OMA) [@OMA], where we
+with R and Bioconductor**](https://microbiome.github.io/OMA/) [@OMA], where we
 walk through common strategies and workflows in microbiome data
 science.
 
