Remove unnecessary step of adding pseudocounts

--- a/11_taxonomic_information.Rmd
+++ b/11_taxonomic_information.Rmd
@@ -182,8 +182,7 @@ For a complete list of available transformations and parameters, see function
 [help](https://microbiome.github.io/mia/reference/transformCounts.html).
 
 ```{r}
-assay(tse, "pseudo") <- assay(tse, "counts") + 1
-tse <- transformCounts(tse, assay.type = "pseudo", method = "relabundance")
+tse <- transformCounts(tse, assay.type = "counts", method = "relabundance", pseudocount = 1)
 tse <- transformCounts(x = tse, assay.type = "relabundance", method = "clr", 
                         pseudocount = 1, name = "clr_transformation")
 
