Remove obsolete pseudocount method

--- a/21_microbiome_community.Rmd
+++ b/21_microbiome_community.Rmd
@@ -59,9 +59,8 @@ techniques, we can visualize the abundances at Phylum level.
 library(ggplot2)
 
 # Add clr-transformation on samples
-assay(tse_phylum, "pseudo") <- assay(tse_phylum, "counts") + 1
-tse_phylum <- transformCounts(tse_phylum, assay.type = "pseudo",
-                              method = "relabundance")
+tse_phylum <- transformCounts(tse_phylum, assay.type = "counts",
+                              method = "relabundance", pseudocount = 1)
 
 tse_phylum <- transformCounts(tse_phylum,
                   assay.type = "relabundance",
