--- a/OMA.Rmd
+++ b/OMA.Rmd
@@ -368,10 +368,10 @@ assay(tse, "counts")[1:5,1:7]
 ```
 
 To illustrate the use of multiple assays, the relative abundance data can be 
-calculated and stored along the original count data using `relAbundanceCounts`.
+calculated and stored along the original count data using `transformCounts`.
 
 ```{r}
-tse <- relAbundanceCounts(tse)
+tse <- transformCounts(tse, assay.type = "counts", method = "relabundance")
 assays(tse)
 ```
 
@@ -1955,7 +1955,7 @@ changing conditions through these levels. For this `mia` contains the
 is as an alternative experiment.
 
 ```{r}
-tse <- relAbundanceCounts(tse)
+tse <- transformCounts(tse, assay.type = "counts", method = "relabundance")
 altExp(tse, "Family") <- agglomerateByRank(tse, rank = "Family",
                                            agglomerateTree = TRUE)
 altExp(tse, "Family")
@@ -2947,7 +2947,7 @@ samples by "Bacteroidetes":
 ```{r}
 library(miaViz)
 # Computing relative abundance
-tse <- relAbundanceCounts(tse)
+tse <- transformCounts(tse, assay.type = "counts", method = "relabundance")
 
 # Getting top taxa on a Phylum level
 tse_phylum <- agglomerateByRank(tse, rank ="Phylum", onRankOnly=TRUE)
