--- a/21_microbiome_community.Rmd
+++ b/21_microbiome_community.Rmd
@@ -24,7 +24,7 @@ samples by "Bacteroidetes":
 ```{r}
 library(miaViz)
 # Computing relative abundance
-tse <- relAbundanceCounts(tse)
+tse <- transformCounts(tse, assay.type = "counts", method = "relabundance")
 
 # Getting top taxa on a Phylum level
 tse_phylum <- agglomerateByRank(tse, rank ="Phylum", onRankOnly=TRUE)
